# FSWW

./: CMakeLists.txt  LICENSE  README  REAME.txt  imgui.ini
conf/: circle_interactive.conf  circle_static.conf  test_interactive.conf  test_interactive_neumann.conf  test_static.conf  texture_static.conf
src/: .#settings.hpp  CMakeLists.txt  CircularObstacle.cpp  CircularObstacle.hpp  CudaWaterSurface.cu  CudaWaterSurface.hpp  DataFile.cpp  DataFile.hpp  DrawingPrimitives.cpp  DrawingPrimitives.hpp  EquivalentSource.cpp  EquivalentSource.hpp  ExceptionSimu.hpp  FFT.h  Grid.cpp  Grid.hpp  InputPoint.cpp  InputPoint.hpp  LinearWave.cpp  LinearWave.hpp  MovingEquivalentSource.cpp  MovingEquivalentSource.hpp  Obstacle.cpp  Obstacle.hpp  ProjectedGrid.cpp  ProjectedGrid.hpp  SquareObstacle.cpp  SquareObstacle.hpp  TextureObstacle.cpp  TextureObstacle.hpp  Times.cpp  Times.hpp  Viewer.cpp  Viewer.hpp  WaterSurface.cpp  WaterSurface.hpp  Wave.cpp  Wave.hpp  WavyObstacle.cpp  WavyObstacle.hpp  (+9 more)
